Started working on the CreationUI.

--- a/Spacegasm.cbp
+++ b/Spacegasm.cbp
@@ -70,11 +70,17 @@
 		<Unit filename="include/CNetworkManager.h" />
 		<Unit filename="include/CPacketHandler.h" />
 		<Unit filename="include/CPacketSender.h" />
+		<Unit filename="include/CRWidget.h" />
 		<Unit filename="include/CStringContainer.h" />
 		<Unit filename="include/CStringExt.h" />
 		<Unit filename="include/CTexture.h" />
 		<Unit filename="include/CTextureManager.h" />
 		<Unit filename="include/CWebViewDrawable.h" />
+		<Unit filename="include/CreationUI/CREvent.h" />
+		<Unit filename="include/CreationUI/CRMouseEvent.h" />
+		<Unit filename="include/CreationUI/CRTextEntered.h" />
+		<Unit filename="include/CreationUI/CRWindow.h" />
+		<Unit filename="include/CreationUI/CreationUI.h" />
 		<Unit filename="include/IPConverter.h" />
 		<Unit filename="include/Windows/CLoginWindow.h" />
 		<Unit filename="include/Windows/CServerLobby.h" />
@@ -89,11 +95,17 @@
 		<Unit filename="src/CGame/onUpdate.cpp" />
 		<Unit filename="src/CNetworkManager.cpp" />
 		<Unit filename="src/CPacketHandler.cpp" />
+		<Unit filename="src/CRWidget.cpp" />
 		<Unit filename="src/CStringContainer.cpp" />
 		<Unit filename="src/CStringExt.cpp" />
 		<Unit filename="src/CTexture.cpp" />
 		<Unit filename="src/CTextureManager.cpp" />
 		<Unit filename="src/CWebViewDrawable.cpp" />
+		<Unit filename="src/CreationUI/CREvent.cpp" />
+		<Unit filename="src/CreationUI/CRMouseEvent.cpp" />
+		<Unit filename="src/CreationUI/CRTextEntered.cpp" />
+		<Unit filename="src/CreationUI/CRWindow.cpp" />
+		<Unit filename="src/CreationUI/CreationUI.cpp" />
 		<Unit filename="src/IPConverter.cpp" />
 		<Unit filename="src/Windows/CLoginWindow.cpp" />
 		<Unit filename="src/Windows/CServerLobby.cpp" />
