--- a/Spacegasm.cbp
+++ b/Spacegasm.cbp
@@ -19,12 +19,12 @@
 				<Linker>
 					<Add option="`pkg-config --libs libenet`" />
 					<Add option="`pkg-config --cflags --libs sigc++-2.0`" />
-					<Add library="Data/Libraries_linux64/libsfml-system.so" />
-					<Add library="Data/Libraries_linux64/libsfml-window.so" />
-					<Add library="Data/Libraries_linux64/libsfml-graphics.so" />
-					<Add library="Data/Libraries_linux64/libsfml-audio.so" />
-					<Add library="Data/Libraries_linux64/libsfml-network.so" />
-					<Add library="Data/Libraries_linux64/libawesomium-1.6.5.so" />
+					<Add library="Data\Libraries_linux64\libsfml-system.so" />
+					<Add library="Data\Libraries_linux64\libsfml-window.so" />
+					<Add library="Data\Libraries_linux64\libsfml-graphics.so" />
+					<Add library="Data\Libraries_linux64\libsfml-audio.so" />
+					<Add library="Data\Libraries_linux64\libsfml-network.so" />
+					<Add library="Data\Libraries_linux64\libawesomium-1.6.5.so" />
 				</Linker>
 				<ExtraCommands>
 					<Add after="cp -r Data/ bin/Linux64Debug/" />
@@ -45,17 +45,27 @@
 					<Add option="-s" />
 					<Add option="`pkg-config --libs libenet`" />
 					<Add option="`pkg-config --cflags --libs sigc++-2.0`" />
-					<Add library="Data/Libraries_linux64/libsfml-system.so" />
-					<Add library="Data/Libraries_linux64/libsfml-window.so" />
-					<Add library="Data/Libraries_linux64/libsfml-graphics.so" />
-					<Add library="Data/Libraries_linux64/libsfml-audio.so" />
-					<Add library="Data/Libraries_linux64/libsfml-network.so" />
-					<Add library="Data/Libraries_linux64/libawesomium-1.6.5.so" />
+					<Add library="Data\Libraries_linux64\libsfml-system.so" />
+					<Add library="Data\Libraries_linux64\libsfml-window.so" />
+					<Add library="Data\Libraries_linux64\libsfml-graphics.so" />
+					<Add library="Data\Libraries_linux64\libsfml-audio.so" />
+					<Add library="Data\Libraries_linux64\libsfml-network.so" />
+					<Add library="Data\Libraries_linux64\libawesomium-1.6.5.so" />
 				</Linker>
 				<ExtraCommands>
 					<Add after="cp -r Data/ bin/Linux64Release/" />
 					<Mode after="always" />
 				</ExtraCommands>
+			</Target>
+			<Target title="Window32Debug">
+				<Option output="bin/Window32Debug/Spacegasm-Client" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/Window32Debug/" />
+				<Option object_output="obj/Window32Debug/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
 			</Target>
 		</Build>
 		<Compiler>
@@ -113,6 +123,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
