--- a/Spacegasm.cbp
+++ b/Spacegasm.cbp
@@ -24,7 +24,7 @@
 					<Add library="Data/Libraries_linux64/libsfml-graphics.so" />
 					<Add library="Data/Libraries_linux64/libsfml-audio.so" />
 					<Add library="Data/Libraries_linux64/libsfml-network.so" />
-					<Add library="Data/Libraries_linux64/libawesomium-1.6.5.so" />
+					<Add library="Data/Libraries_linux64/libsfgui.so" />
 				</Linker>
 				<ExtraCommands>
 					<Add after="cp -r Data/ bin/Linux64Debug/" />
@@ -50,7 +50,7 @@
 					<Add library="Data/Libraries_linux64/libsfml-graphics.so" />
 					<Add library="Data/Libraries_linux64/libsfml-audio.so" />
 					<Add library="Data/Libraries_linux64/libsfml-network.so" />
-					<Add library="Data/Libraries_linux64/libawesomium-1.6.5.so" />
+					<Add library="Data/Libraries_linux64/libsfgui.so" />
 				</Linker>
 				<ExtraCommands>
 					<Add after="cp -r Data/ bin/Linux64Release/" />
@@ -75,7 +75,6 @@
 			<Add directory="include" />
 		</Compiler>
 		<Unit filename="client_main.cpp" />
-		<Unit filename="include/CGUIManager.h" />
 		<Unit filename="include/CGame.h" />
 		<Unit filename="include/CNetworkManager.h" />
 		<Unit filename="include/CPacketHandler.h" />
@@ -139,9 +138,11 @@
 		<Unit filename="include/SFGUI/Viewport.hpp" />
 		<Unit filename="include/SFGUI/Widget.hpp" />
 		<Unit filename="include/SFGUI/Window.hpp" />
+		<Unit filename="include/Windows/ConnectToServer.h" />
+		<Unit filename="include/Windows/Default.h" />
+		<Unit filename="include/Windows/MainMenu.h" />
 		<Unit filename="include/pugiconfig.hpp" />
 		<Unit filename="include/pugixml.hpp" />
-		<Unit filename="src/CGUIManager.cpp" />
 		<Unit filename="src/CGame/CGame.cpp" />
 		<Unit filename="src/CGame/onEvent.cpp" />
 		<Unit filename="src/CGame/onExit.cpp" />
@@ -155,79 +156,9 @@
 		<Unit filename="src/CTexture.cpp" />
 		<Unit filename="src/CTextureManager.cpp" />
 		<Unit filename="src/IPConverter.cpp" />
-		<Unit filename="src/SFGUI/Adjustment.cpp" />
-		<Unit filename="src/SFGUI/Alignment.cpp" />
-		<Unit filename="src/SFGUI/Bin.cpp" />
-		<Unit filename="src/SFGUI/Box.cpp" />
-		<Unit filename="src/SFGUI/Button.cpp" />
-		<Unit filename="src/SFGUI/CheckButton.cpp" />
-		<Unit filename="src/SFGUI/ComboBox.cpp" />
-		<Unit filename="src/SFGUI/Container.cpp" />
-		<Unit filename="src/SFGUI/Context.cpp" />
-		<Unit filename="src/SFGUI/DejaVuSansFont.cpp" />
-		<Unit filename="src/SFGUI/Desktop.cpp" />
-		<Unit filename="src/SFGUI/Engine.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Button.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/CheckButton.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/ComboBox.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Entry.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Frame.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Image.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Label.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Notebook.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/ProgressBar.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Scale.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Scrollbar.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/ScrolledWindow.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Separator.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/SpinButton.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Spinner.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/ToggleButton.cpp" />
-		<Unit filename="src/SFGUI/Engines/BREW/Window.cpp" />
-		<Unit filename="src/SFGUI/Entry.cpp" />
-		<Unit filename="src/SFGUI/FileResourceLoader.cpp" />
-		<Unit filename="src/SFGUI/Fixed.cpp" />
-		<Unit filename="src/SFGUI/Frame.cpp" />
-		<Unit filename="src/SFGUI/GLCanvas.cpp" />
-		<Unit filename="src/SFGUI/Image.cpp" />
-		<Unit filename="src/SFGUI/Label.cpp" />
-		<Unit filename="src/SFGUI/Misc.cpp" />
-		<Unit filename="src/SFGUI/NonCopyable.cpp" />
-		<Unit filename="src/SFGUI/Notebook.cpp" />
-		<Unit filename="src/SFGUI/Object.cpp" />
-		<Unit filename="src/SFGUI/Parsers/ThemeParser/Grammar.cpp" />
-		<Unit filename="src/SFGUI/Parsers/ThemeParser/GrammarPredicates.cpp" />
-		<Unit filename="src/SFGUI/Parsers/ThemeParser/GrammarSelector.cpp" />
-		<Unit filename="src/SFGUI/Parsers/ThemeParser/GrammarSimpleSelector.cpp" />
-		<Unit filename="src/SFGUI/Parsers/ThemeParser/GrammarStatement.cpp" />
-		<Unit filename="src/SFGUI/Parsers/ThemeParser/GrammarToken.cpp" />
-		<Unit filename="src/SFGUI/Parsers/ThemeParser/Parse.cpp" />
-		<Unit filename="src/SFGUI/Primitive.cpp" />
-		<Unit filename="src/SFGUI/ProgressBar.cpp" />
-		<Unit filename="src/SFGUI/RadioButton.cpp" />
-		<Unit filename="src/SFGUI/Range.cpp" />
-		<Unit filename="src/SFGUI/RenderQueue.cpp" />
-		<Unit filename="src/SFGUI/Renderer.cpp" />
-		<Unit filename="src/SFGUI/RendererViewport.cpp" />
-		<Unit filename="src/SFGUI/ResourceLoader.cpp" />
-		<Unit filename="src/SFGUI/ResourceManager.cpp" />
-		<Unit filename="src/SFGUI/SFGUI.cpp" />
-		<Unit filename="src/SFGUI/Scale.cpp" />
-		<Unit filename="src/SFGUI/Scrollbar.cpp" />
-		<Unit filename="src/SFGUI/ScrolledWindow.cpp" />
-		<Unit filename="src/SFGUI/Selector.cpp" />
-		<Unit filename="src/SFGUI/Separator.cpp" />
-		<Unit filename="src/SFGUI/Signal.cpp" />
-		<Unit filename="src/SFGUI/SpinButton.cpp" />
-		<Unit filename="src/SFGUI/Spinner.cpp" />
-		<Unit filename="src/SFGUI/Table.cpp" />
-		<Unit filename="src/SFGUI/TableCell.cpp" />
-		<Unit filename="src/SFGUI/TableOptions.cpp" />
-		<Unit filename="src/SFGUI/ToggleButton.cpp" />
-		<Unit filename="src/SFGUI/Viewport.cpp" />
-		<Unit filename="src/SFGUI/Widget.cpp" />
-		<Unit filename="src/SFGUI/Window.cpp" />
+		<Unit filename="src/MainMenu.cpp" />
+		<Unit filename="src/Windows/ConnectToServer.cpp" />
+		<Unit filename="src/Windows/Default.cpp" />
 		<Unit filename="src/pugixml.cpp" />
 		<Extensions>
 			<code_completion />
