Added Artemis to the server & client codeblocks projects.

--- a/Server/Spacegasm.cbp
+++ b/Server/Spacegasm.cbp
@@ -61,17 +61,41 @@
 			<Add directory="../SFML/include" />
 			<Add directory="include" />
 		</Compiler>
+		<Unit filename="../include/CGUIManager.h" />
+		<Unit filename="../include/CGame.h" />
+		<Unit filename="../include/CNetworkManager.h" />
 		<Unit filename="../include/CPacketHandler.h" />
 		<Unit filename="../include/CPacketSender.h" />
 		<Unit filename="../include/CPlayerData.h">
 			<Option virtualFolder="src/" />
 		</Unit>
 		<Unit filename="../include/CSingleton.h" />
+		<Unit filename="../include/CStringContainer.h" />
+		<Unit filename="../include/CStringExt.h" />
+		<Unit filename="../include/CTexture.h" />
+		<Unit filename="../include/CTextureManager.h" />
+		<Unit filename="../include/Delegate.h" />
+		<Unit filename="../include/IPConverter.h" />
+		<Unit filename="../include/Signal.h" />
 		<Unit filename="../include/pugiconfig.hpp" />
 		<Unit filename="../include/pugixml.hpp" />
 		<Unit filename="../src/CPacketHandler.cpp" />
 		<Unit filename="../src/CPlayerData.cpp" />
+		<Unit filename="../src/Component.cpp" />
+		<Unit filename="../src/ComponentType.cpp" />
+		<Unit filename="../src/ComponentTypeManager.cpp" />
+		<Unit filename="../src/DelayedEntityProcessingSystem.cpp" />
+		<Unit filename="../src/DelayedEntitySystem.cpp" />
+		<Unit filename="../src/Entity.cpp" />
+		<Unit filename="../src/EntityManager.cpp" />
+		<Unit filename="../src/EntityProcessingSystem.cpp" />
+		<Unit filename="../src/EntitySystem.cpp" />
+		<Unit filename="../src/GroupManager.cpp" />
 		<Unit filename="../src/IPConverter.cpp" />
+		<Unit filename="../src/SystemBitManager.cpp" />
+		<Unit filename="../src/SystemManager.cpp" />
+		<Unit filename="../src/TagManager.cpp" />
+		<Unit filename="../src/World.cpp" />
 		<Unit filename="../src/pugixml.cpp" />
 		<Unit filename="include/CChatManager.h" />
 		<Unit filename="include/CPeerManager.h" />
