--- a/Spacegasm.cbp
+++ b/Spacegasm.cbp
@@ -5,7 +5,7 @@
 		<Option title="Spacegasm-Client" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Artemis C++/;" />
+		<Option virtualFolders="External Libraries/Artemis C++/;External Libraries/;External Libraries/pugiXML/;" />
 		<Build>
 			<Target title="Linux64Debug">
 				<Option output="bin/Linux64Debug/Spacegasm-Client" prefix_auto="1" extension_auto="1" />
@@ -77,7 +77,7 @@
 		</Compiler>
 		<Unit filename="client_main.cpp" />
 		<Unit filename="include/BitSize.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/CGame.h" />
 		<Unit filename="include/CNetworkManager.h" />
@@ -88,41 +88,41 @@
 		<Unit filename="include/CTexture.h" />
 		<Unit filename="include/CTextureManager.h" />
 		<Unit filename="include/Component.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/ComponentMapper.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/ComponentType.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/ComponentTypeManager.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/DelayedEntityProcessingSystem.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/DelayedEntitySystem.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/Entity.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/EntityManager.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/EntityProcessingSystem.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/EntitySystem.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/GroupManager.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/IPConverter.h" />
 		<Unit filename="include/ImmutableBag.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/SFGUI/Adjustment.hpp" />
 		<Unit filename="include/SFGUI/Alignment.hpp" />
@@ -179,26 +179,30 @@
 		<Unit filename="include/SFGUI/Widget.hpp" />
 		<Unit filename="include/SFGUI/Window.hpp" />
 		<Unit filename="include/SystemBitManager.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/SystemManager.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/TagManager.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/TypeInfoComparator.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="include/Windows/ConnectToServer.h" />
 		<Unit filename="include/Windows/Default.h" />
 		<Unit filename="include/Windows/MainMenu.h" />
 		<Unit filename="include/Windows/ServerConnection.h" />
 		<Unit filename="include/World.h">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
-		<Unit filename="include/pugiconfig.hpp" />
-		<Unit filename="include/pugixml.hpp" />
+		<Unit filename="include/pugiconfig.hpp">
+			<Option virtualFolder="External Libraries/pugiXML/" />
+		</Unit>
+		<Unit filename="include/pugixml.hpp">
+			<Option virtualFolder="External Libraries/pugiXML/" />
+		</Unit>
 		<Unit filename="src/CGame/CGame.cpp" />
 		<Unit filename="src/CGame/onEvent.cpp" />
 		<Unit filename="src/CGame/onExit.cpp" />
@@ -212,53 +216,55 @@
 		<Unit filename="src/CTexture.cpp" />
 		<Unit filename="src/CTextureManager.cpp" />
 		<Unit filename="src/Component.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/ComponentType.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/ComponentTypeManager.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/DelayedEntityProcessingSystem.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/DelayedEntitySystem.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/Entity.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/EntityManager.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/EntityProcessingSystem.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/EntitySystem.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/GroupManager.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/IPConverter.cpp" />
 		<Unit filename="src/SystemBitManager.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/SystemManager.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/TagManager.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
 		<Unit filename="src/Windows/ConnectToServer.cpp" />
 		<Unit filename="src/Windows/Default.cpp" />
 		<Unit filename="src/Windows/MainMenu.cpp" />
 		<Unit filename="src/Windows/ServerConnection.cpp" />
 		<Unit filename="src/World.cpp">
-			<Option virtualFolder="Artemis C++/" />
+			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
-		<Unit filename="src/pugixml.cpp" />
+		<Unit filename="src/pugixml.cpp">
+			<Option virtualFolder="External Libraries/pugiXML/" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
