--- a/Spacegasm.cbp
+++ b/Spacegasm.cbp
@@ -99,6 +99,7 @@
 		<Unit filename="include/ComponentTypeManager.h">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
+		<Unit filename="include/Components/Position.h" />
 		<Unit filename="include/DelayedEntityProcessingSystem.h">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
@@ -184,6 +185,7 @@
 		<Unit filename="include/SystemManager.h">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
+		<Unit filename="include/Systems/Physics.h" />
 		<Unit filename="include/TagManager.h">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
@@ -224,6 +226,7 @@
 		<Unit filename="src/ComponentTypeManager.cpp">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
+		<Unit filename="src/Components/Position.cpp" />
 		<Unit filename="src/DelayedEntityProcessingSystem.cpp">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
@@ -252,6 +255,7 @@
 		<Unit filename="src/SystemManager.cpp">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
+		<Unit filename="src/Systems/Physics.cpp" />
 		<Unit filename="src/TagManager.cpp">
 			<Option virtualFolder="External Libraries/Artemis C++/" />
 		</Unit>
